# flutter_cpp_physics_engine

./: CMakeLists.txt  README.md  SECURITY.md
flutter_example/: firebase_options.dart  game_page.dart  main.dart
flutter_example/dialogs/: no_matches.dart
flutter_example/engine/: jewel_struct.dart
flutter_example/engine/core/: ffi_engine.dart
flutter_example/engine/logic/: match_processor.dart
flutter_example/engine/rules/: game_rules.dart
include/: game_engine.h
src/: BoardManager.cpp  InitialBoardGenerator.cpp  PhysicsBody.cpp  PhysicsWorld.cpp  Vector2.cpp  game_engine.cpp  jewel.cpp
src/include/: BoardManager.h  InitialBoardGenerator.h  Jewel.h  JewelType.h  PhysicsBody.h  PhysicsWorld.h  Vector2.h  game_engine.h
